Aula 21 - TEste UserResource findAll